@@ -1,4 +1,5 @@
 1 Jan 2018
+fix: function call Christmas
 add: checkdate for Christmas Gift
 fix: lang not loaded in achievements cleanup
 
